deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: gcr.io/sonic-stratum-415515/fams-ui:1.0.5
        ports:
        - containerPort: 3000
